Fix binary distributions of cross compilers
Summary:
- copy over the original settings file
  Otherwise most of the custom cross compiler toolchain will
  be screwed up upon install.  I'd rather have someone complain
  about a proper target-prefixed tool being missing, than getting
  garbaled output and a slew of strange errors because the final
  configure selected tools on the install machine just don't
  match up.

- persist target-prefix. For cross compilers, retain the $target-
  prefix. This allows installing multiple cross compierls targetting
  different targets alongside each other.

Reviewers: austin, hvr, bgamari

Subscribers: rwbarton, trofi, thomie, hvr, bgamari, erikd

Differential Revision: https://phabricator.haskell.org/D4058

--- a/distrib/configure.ac.in
+++ b/distrib/configure.ac.in
@@ -36,9 +36,9 @@ FPTOOLS_SET_PLATFORM_VARS
 FP_FIND_ROOT
 
 # ToDo: if Stage1Only=YES, should be YES
-CrossCompiling=NO
-CrossCompilePrefix=""
-TargetPlatformFull="${target}"
+CrossCompiling=@CrossCompiling@
+CrossCompilePrefix=@CrossCompilePrefix@
+TargetPlatformFull=@TargetPlatformFull@
 
 AC_SUBST(CrossCompiling)
 AC_SUBST(CrossCompilePrefix)
@@ -198,8 +198,17 @@ fi
 
 FP_SETTINGS
 
-#
-AC_CONFIG_FILES(settings mk/config.mk mk/install.mk)
+dnl ** Hack tools for cross compilers
+dnl --------------------------------------------------------------
+dnl When building a binary distribution for cross compilers,
+dnl we likely want to retain the target-prefixed tools, and not
+dnl have configure overwrite them with what ever it finds, as
+dnl the found tools likely do not target the target.
+AC_CONFIG_FILES(mk/config.mk mk/install.mk)
+if test "x$CrossCompiling" = "xNO"; then
+AC_CONFIG_FILES(settings)
+fi
+
 AC_OUTPUT
 
 # We get caught by
